<?xml version="1.0"?>
<package>
    <name>kalman</name>
    <version>1.10.0</version>
    <description>The kalman filter package</description>
    <maintainer email="mf21042@shibaura-it.ac.jp">amc</maintainer>
    <license>Apache 2</license>
    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>autoware_build_flags</buildtool_depend>

    <build_depend>std_msgs</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>pcl_ros</build_depend>
    <build_depend>pcl_conversions</build_depend>
    <build_depend>libpcl-all-dev</build_depend>

    <run_depend>std_msgs</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>pcl_ros</run_depend>
    <run_depend>pcl_conversions</run_depend>
    <run_depend>libpcl-all-dev</run_depend>

</package>
